2013-03-13  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2013-03-12 mktime: fix configure typo
	2013-03-11 regex: port to mingw's recent addition of undeclared alarm
	2013-03-11 putenv: avoid compilation warning on mingw
	2013-03-11 unistd: don't prevent Tru64 Unix from using gnulib strtod.

2013-03-06  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.ac (TERM_HEADER): Remove duplicate definition (Bug#13872).
	It can mess up 'configure' runs.

2013-03-05  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (install-man): Ignore gzip exit status.

2013-03-03  Glenn Morris  <rgm@gnu.org>

	* make-dist: Remove lzma (it's replaced by xz).

2013-03-01  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2013-02-21 putenv: port better to native Windows
	2013-02-18 extern-inline: avoid compilation error with HP-UX cc
	2013-02-14 putenv: fix heap corruption with mixed putenv/_putenv

2013-02-28  Ken Brown  <kbrown@cornell.edu>

	* configure.ac (HAVE_DATA_START): Fix test.  (Bug#13818)

2013-02-25  Paul Eggert  <eggert@cs.ucla.edu>

	Simplify data_start configuration (Bug#13783).
	* configure.ac (CRT_DIR, LIB_STANDARD, START_FILES, DATA_START)
	(LD_FIRSTFLAG, ORDINARY_LINK, LIB_GCC): Remove.
	(AC_CHECK_HEADERS_ONCE): Remove sys/resource.h, as it's
	not always needed.
	(HAVE_DATA_START): New macro.

2013-02-18  Aidan Gauland  <aidalgol@no8wireless.co.nz>

	* lisp/eshell/em-cmpl.el: Corrected "context-related help"
	keybinding in commentary.

2013-02-21  Paul Eggert  <eggert@cs.ucla.edu>

	Parallelize documentation builds.
	This speeds up building of documentation on multiprocessor
	platforms, and is motivated by Texinfo 5.0, which is much slower.
	Add a toplevel rule 'make docs' to make all the documentation.
	* .bzrignore: Add .dvi, .html, .ps.
	* Makefile.in (DVIS, HTMLS, INFOS, PSS, DOCS): New macros.
	($(DOCS), docs, vi, html, pdf, ps): New rules.
	(info-real): Depend on $(INFOS) rather than doing it sequentially.